# telegram_notifier

./: .gitignore  README.md  pyproject.toml
telegram_notifier/: __init__.py  core.py
